/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package principioabiertocerrado;

/**
 *
 * @author juand
 */
public class Volar implements SuperHabilidad{
    @Override
    // Se define el metodo ejecutar()
    public void ejecutar(){
        System.out.println("Puede volar.");
    }
}
